Fix: Desktop browse menu subnav icon alignment

--- a/app/assets/stylesheets/design/navigation.scss
+++ b/app/assets/stylesheets/design/navigation.scss
@@ -904,6 +904,10 @@
     .icon-fr2 {
       padding-right: 3px;
     }
+
+    .nav_browse .subnav .icon-fr2 {
+      top: 0px;
+    }
   }
 
 }
